--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,6 +111,7 @@ services:
       SidecarDiscover: "false"
     depends_on:
       - broker
+      - db
     environment:
       - AEROALPES_ADDRESS=aeroalpes
       - PULSAR_ADDRESS=broker
@@ -161,3 +162,19 @@ services:
       - pulsar
     ports:
       - "5678:5678"
+  #Mysql
+  db:
+    image: mysql:8
+    hostname: mysqldb
+    container_name: mysqldb
+    cap_add:
+      - SYS_NICE
+    restart: always
+    environment:
+      - MYSQL_DATABASE=contratos
+      - MYSQL_ROOT_PASSWORD=adminadmin
+    profiles: ["aeroalpes", "db"]
+    networks:
+      - pulsar
+    ports:
+      - '3306:3306'
