--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,51 +117,6 @@ services:
       - PULSAR_ADDRESS=broker
     ports:
       - "5000:5000"
-  adaptador:
-    image: "aeroalpes/adaptador"
-    profiles: ["aeroalpes", "monolito"]
-    container_name: adaptador
-    hostname: adaptador
-    depends_on:
-      - aeroalpes
-    networks:
-      - sidecar
-    environment:
-      - AEROALPES_ADDRESS=aeroalpes
-      - PULSAR_ADDRESS=broker
-    ports:
-      - "50051:50051"
-  
-  # Servicios de Notificación
-  notificacion:
-    container_name: notificacion
-    hostname: notificacion
-    image: aeroalpes/notificacion 
-    profiles: ["aeroalpes", "notificacion"]
-    depends_on:
-      - aeroalpes
-      - broker
-    environment:
-      - AEROALPES_ADDRESS=aeroalpes
-      - PULSAR_ADDRESS=broker
-    networks:
-      - pulsar
-  # Servicio UI
-  ui:
-    container_name: ui
-    hostname: ui
-    image: aeroalpes/ui 
-    profiles: ["aeroalpes", "ui"]
-    depends_on:
-      - aeroalpes
-      - broker
-    environment:
-      - AEROALPES_ADDRESS=aeroalpes
-      - PULSAR_ADDRESS=broker
-    networks:
-      - pulsar
-    ports:
-      - "5678:5678"
   #Mysql
   db:
     image: mysql:8
@@ -174,6 +129,42 @@ services:
       - MYSQL_DATABASE=contratos
       - MYSQL_ROOT_PASSWORD=adminadmin
     profiles: ["aeroalpes", "db"]
+    networks:
+      - pulsar
+    ports:
+      - '3307:3306'
+
+
+  inquilinos:
+    container_name: inquilinos
+    hostname: inquilinos
+    image: inquilinos/flask 
+    profiles: ["inquilinos", "monolito"]
+    networks:
+      - sidecar
+      - pulsar
+    labels:
+      SidecarDiscover: "false"
+    depends_on:
+      - broker
+      - db
+    environment:
+      - AEROALPES_ADDRESS=inquilinos
+      - PULSAR_ADDRESS=broker
+    ports:
+      - "5000:5000"
+  #Mysql
+  db2:
+    image: mysql:8
+    hostname: mysqldb2
+    container_name: mysqldb2
+    cap_add:
+      - SYS_NICE
+    restart: always
+    environment:
+      - MYSQL_DATABASE=contratos
+      - MYSQL_ROOT_PASSWORD=adminadmin
+    profiles: ["inquilinos", "db2"]
     networks:
       - pulsar
     ports:
