--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,10 +10,8 @@ tasks:
       gp sync-done bundle
   - name: Instalar dependencias
     init: gp sync-await bundle
-    command: pip install -r requirements.txt && pip install -r sidecar-requirements.txt && pip install -r ui-requirements.txt
-  - name: Crear imagenes Docker
-    init: > 
-      gp sync-done images
+    command: pip install -r requirements.txt
+
   - name: Crear folder para datos y asigna permisos
     init: > 
       mkdir -p data/bookkeeper && 
